LinKreta_POC_Repository/force-app/main/default/objects/CapIQ__mdt/CapIQ__mdt.object-meta.xml
<CustomObject>
    <label>CapIQ</label>
    <pluralLabel>CapIQ</pluralLabel>
</CustomObject>