LinKreta_POC_Repository/force-app/main/default/objects/CapIQ__mdt/fields/EndPointURL__c.field-meta.xml
<CustomField>
    <fullName>EndPointURL__c</fullName>
    <description>End Point URL of CapIQ</description>
    <label>End Point URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>