LinKreta_POC_Repository/force-app/main/default/objects/CapIQ__mdt/fields/NumberofBoardMember__c.field-meta.xml
<CustomField>
    <fullName>NumberofBoardMember__c</fullName>
    <description>Number of Board Member to be fetched from CapIQ</description>
    <label>Number of Board Member</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>