LinKreta_POC_Repository/force-app/main/default/objects/CapIQ__mdt/fields/NumberofRecordforSearch__c.field-meta.xml
<CustomField>
    <fullName>NumberofRecordforSearch__c</fullName>
    <description>Total number of required record in search functionality.</description>
    <label>Number of Record for Search</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>