LinKreta_POC_Repository/force-app/main/default/objects/CapIQ__mdt/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <label>UserName</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>